# tangle

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  Coveralls.cmake  Doxyfile.in  LICENSE  README.md  conanfile.txt  coveralls.py  get_cover.py  googletest.cmake  googletest.cpp  run_release.py
browser/: CMakeLists.txt
browser/include/tangle/browser/: cursor.hpp  entities.hpp  fetch.hpp  forms.hpp  html_dtd.hpp  html_dtd_flags.hpp  html_split.hpp  offline_media.hpp  selector.hpp  selector_action.hpp  span.hpp
browser/include/tangle/browser/walk/: cursor.hpp  pages.hpp  selector.hpp  selector_action.hpp  span.hpp  std_actions.hpp
browser/src/: action_parser.hpp  cursor.cpp  entities.cpp  entities.py  fetch.cpp  forms.cpp  html_dtd.cpp  html_split.cpp  offline_media.cpp  selector.cpp  selector_action.cpp  selector_parser.hpp
browser/src/walk/: action_parser.hpp  cursor.cpp  pages.cpp  selector.cpp  selector_action.cpp  selector_parser.hpp  std_actions.cpp
browser/tests/: cursor.cc  cxx_string.hh  fetch.cc  html_dtd.cc  html_dtd_allows.cc  html_entities.cc  html_forms.cc  html_split.cc  offline_media.cc  pages.cc  paths.hh  selector.cc  selector_action.cc
browser/tests/walk/: cursor.cc  pages.cc  paths.cc  selector.cc  std_actions.cc
cache/: CMakeLists.txt  Doxyfile.in  README.md
cache/include/tangle/cache/: cache.h  cache.hpp  loader.h  loader.hpp
cache/include/tangle/cache/impl/: loader_impl.h  loader_impl.hpp
cache/src/: cache.cpp  loader.cpp
cmake/: base-profiles.json  tangle_library.cmake
cookie/: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
cookie/include/tangle/: cookie.h  cookie.hpp
cookie/include/tangle/cookie/: chrono.h  chrono.hpp  cstring.h  io.h  io.hpp  item.h  item.hpp  jar.h  jar.hpp  scope.h
cookie/src/: cookie_chrono.cpp  cookie_io.cpp  cookie_item.cpp  cookie_jar.cpp  cookie_scope.cpp
cookie/tests/: CMakeLists.txt  client_cookies.cc  cookie-dir.in.hh  cookie_chrono.cc  cookie_header.cc  cookie_jar_add.cc  cookie_jar_file.cc  cookie_jar_load.cc  cookie_jar_prune.cc  cookie_jar_store.cc  cookie_jar_str.cc  scope_matches.cc  server_cookies.cc  setcookie_header.cc  testing_io.hpp
cookie/tests/testcookie/: CMakeLists.txt  client_cookies.cc  cookie_jar_add.cc  cookie_jar_load.cc  cookie_jar_prune.cc  cookie_jar_str.cc  scope_matches.cc  server_cookies.cc  setcookie_header.cc  testing_io.h
cstring/: CMakeLists.txt
cstring/include/tangle/: cstring.h
docs/: Doxyfile
http/: CMakeLists.txt
http/include/tangle/http/: client.hh  client.hpp  curl.hpp  doc_impl.hpp  headers.hh  headers.hpp  proto.hh  proto.hpp
http/src/: client.cc  client.cpp  curl.cc  curl.cpp  doc_impl.cpp  headers.cc  headers.cpp
http/tests/: client.cc  curl.cc  curl_slist.cc  curl_transfer.cc  flask-app-dir.in.hh  flask-app.cc  flask-app.hh  flask-app.py  headers.cc  tester.hh
include/net/: cookie.h  uri.h
include/net/cookie/: cstring.h  io.h  item.h  jar.h
msg/: CMakeLists.txt  README.md
msg/include/tangle/msg/: base_parser.h  base_parser.hpp  field_parser.hpp  hasher.h  hasher.hpp  http_parser.h  http_parser.hpp
msg/src/: base_parser.cpp  field_parser.cpp  hasher.cpp  http_parser.cpp
msg/tests/: base_parser.cc  field_parser.cc  hasher.cc  http_parser.cc
msg/tests/testmsg/: CMakeLists.txt  base_parser.cc  http_parser.cc
natvis/: cstring.natvis  header.natvis  msg.natvis  uri.natvis  url.natvis
nav/: CMakeLists.txt  Doxyfile.in
nav/extra/proto-curl/: CMakeLists.txt
nav/extra/proto-curl/include/tangle/curl/: curl.hpp  proto.hpp
nav/extra/proto-curl/src/: curl.cpp
nav/extra/proto-curl/tests/: curl.cc  curl_slist.cc  curl_transfer.cc  flask-app-dir.in.hh  flask-app.cc  flask-app.hh  flask-app.py
nav/include/tangle/nav/: cache.h  doc_impl.hpp  document.hpp  headers.hpp  http_doc_impl.h  http_doc_impl.hpp  jar.h  jar.hpp  loader.h  navigator.h  navigator.hpp  protocol.h  protocol.hpp  request.h  request.hpp
nav/include/tangle/nav/impl/: loader_impl.h
nav/src/: doc_impl.cpp  document.cpp  headers.cpp  headers_parsers.cpp  headers_parsers.hpp  loader.cpp  nav_cache.cpp  nav_jar.cpp  navigator.cpp  request.cpp
nav/tests/: header_content_type.cc  headers.cc  nav_make.cc  request.cc
src/: cookie_chrono.cpp  cookie_item.cpp  cookie_jar.cpp  cookie_scope.cpp  uri.cpp
str/: CMakeLists.txt
str/include/tangle/: base_parser.hpp  str.hpp
str/src/: str.cpp
str/tests/: base_parser.cc  str.cc  str.cc.char.splits.inc  str.cc.joins.inc
tests/: main.cpp
tests/testcookie/: client_cookies.cc  cookie_header.cc  cookie_jar_add.cc  cookie_jar_str.cc  scope_matches.cc  server_cookies.cc  setcookie_header.cc  testing_io.h
tests/testuri/: CMakeLists.txt  uri.cc
tools/lookup/: CMakeLists.txt  html.dtd
tools/lookup/apps/: html-dtd.cc  html-entities.cc
tools/lookup/dtd/: dtd_database.cc  dtd_database.hh  dtd_parser.cc  dtd_parser.hh  dtd_types.cc  dtd_types.hh
tools/lookup/lib/: file.cc  file.hh  indent.hh  json.cc  json.hh  lookup.cc  lookup.hh  str.cc  str.hh
uri/: CMakeLists.txt  Doxyfile.in  LICENSE  README.md
uri/include/tangle/: decode.hpp  uri.h  uri.hpp
uri/src/: decode.cpp  uri.cpp
uri/tests/: CMakeLists.txt  auth.cc  cannonical.cc  canonical.cc  components.cc  parts.cc  queries.cc  uri.cc
uri/tests/testuri/: CMakeLists.txt  uri.cc
utils/: CMakeLists.txt
utils/include/tangle/: html_entities.hpp  html_forms.hpp  html_split.hpp  offline_media.hpp
utils/src/: html_entities.cpp  html_entities.py  html_forms.cpp  html_split.cpp  offline_media.cpp
utils/tests/: cxx_string.hh  html_entities.cc  html_forms.cc  html_split.cc  offline_media.cc  str.cc.empty_sep.inc  str.cc.splits.inc
